--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -86,7 +86,7 @@ jobs:
           if-no-files-found: error
 
       - name: GCloud CLI setup
-        if: ${{ github.ref != 'refs/heads/master' && env.SHARED == 'ON' }}
+        if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
         # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
@@ -96,7 +96,7 @@ jobs:
           export_default_credentials: true
 
       - name: Upload package to GCS bucket
-        if: ${{ github.ref != 'refs/heads/master' && env.SHARED == 'ON' }}
+        if: ${{ github.ref == 'refs/heads/master' && env.SHARED == 'ON' }}
         run: |
           gsutil cp build/package/${{ env.DEVEL_PKG_NAME }} gs://open3d-releases-master/devel/
           echo "Download devel package at: https://storage.googleapis.com/open3d-releases-master/devel/${{ env.DEVEL_PKG_NAME }}"
@@ -279,7 +279,7 @@ jobs:
     # no need to run on macOS
     runs-on: ubuntu-18.04
     if: ${{ github.ref == 'refs/heads/master' }}
-    needs: [build-wheel]
+    needs: [build-wheel, MacOS]
     steps:
       - name: GCloud CLI setup
         uses: google-github-actions/setup-gcloud@v0.2.1
