--- a/.github/workflows/ubuntu-cuda.yml
+++ b/.github/workflows/ubuntu-cuda.yml
@@ -2,6 +2,11 @@ name: Ubuntu CUDA
 
 on:
   workflow_dispatch:
+    inputs:
+      developer_build:
+        description: 'Set to OFF for Release packages.'
+        required: false
+        default: 'ON'
   push:
     branches:
       - master
@@ -11,6 +16,7 @@ on:
 env:
   GCE_GPU_CI_SA: ${{ secrets.GCE_GPU_CI_SA }}
   GCE_CLI_GHA_VERSION: "302.0.0"
+  DEVELOPER_BUILD: ${{ github.event.inputs.developer_build || 'ON' }}
 
 jobs:
   skip-check:
@@ -119,10 +125,16 @@ jobs:
                     && ls -alh Open3D \
                     && nvidia-smi"
       - name: VM build docker
+        env:
+          CI_BUILD_CONFIG: ${{ matrix.CI_CONFIG }}
         run: |
+          if [ "${CI_CONFIG}"=="3-ml-shared-bionic" ] && \
+            [ "${DEVELOPER_BUILD}"=="OFF" ]; then
+            export CI_BUILD_CONFIG=${CI_BUILD_CONFIG}-RELEASE
+          fi
           gcloud compute ssh "${INSTANCE_NAME}" \
             --zone="${GCE_ZONE}" \
-            --command="sudo Open3D/docker/docker_build.sh ${CI_CONFIG}"
+            --command="sudo Open3D/docker/docker_build.sh ${CI_BUILD_CONFIG}"
           if [ ${{ matrix.CI_CONFIG }} == '3-ml-shared-bionic' ]; then
               gcloud compute scp --zone="${GCE_ZONE}" \
                 "${INSTANCE_NAME}":open3d-devel-linux*.tar.xz "$PWD"
@@ -137,7 +149,7 @@ jobs:
           if-no-files-found: error
 
       - name: Upload package to GCS bucket
-        if: ${{ github.ref != 'refs/heads/master' && matrix.CI_CONFIG == '3-ml-shared-bionic' }}
+        if: ${{ github.ref == 'refs/heads/master' && matrix.CI_CONFIG == '3-ml-shared-bionic' }}
         run: |
           gcloud compute ssh "${INSTANCE_NAME}" \
             --zone="${GCE_ZONE}" \
@@ -150,6 +162,7 @@ jobs:
           gcloud compute ssh "${INSTANCE_NAME}" \
             --zone="${GCE_ZONE}" \
             --command="sudo Open3D/docker/docker_test.sh ${CI_CONFIG}"
+
       - name: VM ccache upload
         if: ${{ github.ref == 'refs/heads/master' }}
         run: |
@@ -157,6 +170,7 @@ jobs:
             --zone="${GCE_ZONE}" \
             --command="ls -alh \
                     && gsutil cp ${CCACHE_TAR_NAME}.tar.gz gs://open3d-ci-cache/"
+
       - name: VM delete
         if: always()
         run: |
