--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -153,7 +153,7 @@ jobs:
           if-no-files-found: error
 
       - name: GCloud CLI setup
-        if: ${{ github.ref != 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
+        if: ${{ github.ref == 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
         # https://github.com/GoogleCloudPlatform/github-actions/issues/100#issuecomment-650798308
         uses: google-github-actions/setup-gcloud@v0.2.1
         env:
@@ -165,7 +165,7 @@ jobs:
           export_default_credentials: true
 
       - name: Upload package to GCS bucket
-        if: ${{ github.ref != 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
+        if: ${{ github.ref == 'refs/heads/master' && matrix.SHARED == 'ON' && matrix.BUILD_CUDA == 'OFF' }}
         env:
           CLOUDSDK_PYTHON: ${{env.PYTHON_EXECUTABLE}}
         run: |
@@ -406,7 +406,7 @@ jobs:
     # no need to run on Windows
     runs-on: ubuntu-18.04
     if: ${{ github.ref == 'refs/heads/master' }}
-    needs: [build-wheel]
+    needs: [build-wheel, windows]
     steps:
       - name: GCloud CLI setup
         uses: google-github-actions/setup-gcloud@v0.2.1
