--- a/docs/getting_started.rst.in
+++ b/docs/getting_started.rst.in
@@ -3,62 +3,6 @@
 Getting started
 ###############
 
-.. _install_open3d_c++:
-
-C++
-===
-
-Open3D C++ development libraries are available in Debian (since `bullseye`)
-repositories and in derivatives, such as Ubuntu 21.10+. To install, use:
-
-.. code-block:: bash
-
-    sudo apt install libopen3d-dev
-
-However, other OS repositories may not contain Open3D, the version available may
-not be current or may not contain all features. Also, it may be inconvenient to
-use if you do not have admin access on the system. We provide up to date and
-feature complete pre-built binary package archives for all supported platforms
-on `Github releases <https://github.com/isl-org/Open3D/releases>`__ (since
-`v0.15`). Also, the latest development version (``HEAD`` of ``master`` branch)
-binary package archives are provided here:
-
-:Linux (glibc 2.27+):
-    .. hlist::
-        :columns: 4
-
-        * `x86_64 <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-linux-x86_64-@OPEN3D_VERSION_FULL@.tar.xz>`__
-        * `x86_64 with CUDA 11.x <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-linux-x86_64-cuda-@OPEN3D_VERSION_FULL@.tar.xz>`__
-
-:MacOSX v10.15+:
-    .. hlist::
-        :columns: 4
-
-        * `x86_64 <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-darwin-x86_64-@OPEN3D_VERSION_FULL@.tar.xz>`__
-
-:Windows 10+:
-    .. hlist::
-        :columns: 4
-
-        * `x86_64 Release <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-windows-amd64-@OPEN3D_VERSION_FULL@.zip>`__
-        * `x86_64 Debug <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-windows-amd64-@OPEN3D_VERSION_FULL@-dbg.zip>`__
-
-If you need only a subset of features, or a custom build configuration, please
-refer to :ref:`compilation` and compile Open3D from source.
-
-Try it
-------
-
-To use Open3D in your C++ project, checkout the following example CMake
-projects:
-
-* `Find Pre-Installed Open3D Package in CMake <https://github.com/isl-org/open3d-cmake-find-package>`__
-* `Use Open3D as a CMake External Project <https://github.com/isl-org/open3d-cmake-external-project>`__
-
-The C++ code examples in the `examples/cpp` folder of the repository illustrate
-a lot of the functionality available in Open3D and are a good place to start
-using Open3D in your projects.
-
 .. _install_open3d_python:
 
 Python
@@ -218,7 +162,7 @@ help troubleshoot the issue:
 
 
 Running Open3D tutorials
-========================
+------------------------
 
 A complete set of Python tutorials and testing data will also be copied to
 demonstrate the usage of Open3D Python interface. See ``examples/python`` for
@@ -228,3 +172,96 @@ all Python examples.
     ``matplotlib``, ``opencv-python``. OpenCV is only used for reconstruction
     system. Please read util/install-deps-python.sh for installing these
     packages.
+
+
+.. _install_open3d_c++:
+
+C++
+===
+
+To get started with using Open3D in your C++ applications, you can download a
+binary package archive from `Github releases
+<https://github.com/isl-org/Open3D/releases>`__ (since `v0.15`). These binary
+package archives contain the Open3D shared library built with all supported
+features and are available for the main supported platforms. Also, the latest
+development version (``HEAD`` of ``master`` branch) binary package archives are
+provided here:
+
+:Linux (Ubuntu 18.04+ or glibc 2.27+ [*]_):
+    .. hlist::
+        :columns: 4
+
+        * `x86_64 <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-linux-x86_64-@OPEN3D_VERSION_FULL@.tar.xz>`__
+        * `x86_64 with CUDA 11.x <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-linux-x86_64-cuda-@OPEN3D_VERSION_FULL@.tar.xz>`__
+
+:MacOSX v10.15+:
+    .. hlist::
+        :columns: 4
+
+        * `x86_64 <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-darwin-x86_64-@OPEN3D_VERSION_FULL@.tar.xz>`__
+
+:Windows 10+:
+    .. hlist::
+        :columns: 4
+
+        * `x86_64 Release <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-windows-amd64-@OPEN3D_VERSION_FULL@.zip>`__
+        * `x86_64 Debug <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-windows-amd64-@OPEN3D_VERSION_FULL@-dbg.zip>`__
+
+.. [*] To check the `glibc` version on your system, run :code:`ldd --version`
+
+If you need only a subset of features, or a custom build configuration, please
+refer to :ref:`compilation` and compile Open3D from source.
+
+Try it
+------
+
+Extract the archive and move the contents to a local folder (such as
+``~/Documents/Open3D_install``):
+
+.. code-block:: bash
+
+    $ tree -L 2 Open3D_install
+    Open3D_install
+    ├── include
+    │   └── open3d
+    └── lib
+        ├── cmake
+        ├── libOpen3D.so
+        ├── open3d_tf_ops.so
+        └── open3d_torch_ops.so
+
+    4 directories, 3 files
+
+In Windows, you will have an additional ``bin`` folder with ``Open3D.dll``. Some
+files may be absent in the case of unsupported functionality.  Now add the
+``include`` and ``lib`` folders to your compiler options to build your program
+with Open3D:
+
+.. code-block:: bash
+
+    export Open3D_ROOT="$HOME/Documents/Open3D_install"
+    # Now compile and link your program with Open3D.
+    c++ -I"$Open3D_ROOT"/include -L"$Open3D_ROOT"/lib -lopen3d your_open3d_app.cpp
+    # Ensure libopen3d.so can be found by the system library loader at run time:
+    # For Linux:
+    export LD_LIBRARY_PATH=${LD_LIBRARY_PATH:+$LD_LIBRARY_PATH:}$Open3D_ROOT/lib
+    # For macOS:
+    export DYLD_LIBRARY_PATH=${DYLD_LIBRARY_PATH:+$DYLD_LIBRARY_PATH:}$Open3D_ROOT/lib
+
+For Windows (MSVC), add ``$Open3D_ROOT/include`` and ``$Open3D_ROOT/lib`` and to
+your MSVC solution's include and library paths respectively. The ``lib`` folder
+contains the import library, while the DLL is in the ``$Open3D_ROOT/bin``
+folder. You can copy this to the build output folder of your application (or add
+it `$Open3D_ROOT/bin`` to the ``PATH`` environment variable) to ensure that it
+is found at runtime.  Ensure that you use the debug or release version of the
+library if you build in `Debug` or `Release` mode respectively.
+
+The C++ code examples in the ``examples/cpp`` folder of the repository illustrate
+a lot of the functionality available in Open3D and are a good place to start
+using Open3D in your projects.
+
+For more complex or cross platform projects, you can use CMake to configure your
+build. See the following example CMake projects as reference:
+
+* `Find Pre-Installed Open3D Package in CMake <https://github.com/isl-org/open3d-cmake-find-package>`__
+* `Use Open3D as a CMake External Project <https://github.com/isl-org/open3d-cmake-external-project>`__
