--- a/cpp/open3d/data/CMakeLists.txt
+++ b/cpp/open3d/data/CMakeLists.txt
@@ -2,9 +2,9 @@ open3d_ispc_add_library(data OBJECT)
 
 target_sources(data PRIVATE
     Dataset.cpp
-    Download.cpp
-    Extract.cpp
-    ExtractZIP.cpp
+    tools/Download.cpp
+    tools/Extract.cpp
+    tools/ExtractZIP.cpp
 )
 
 open3d_show_and_abort_on_warning(data)
