--- a/examples/cpp/CMakeLists.txt
+++ b/examples/cpp/CMakeLists.txt
@@ -27,49 +27,49 @@ macro(open3d_add_example EXAMPLE_CPP_NAME)
     list(APPEND EXAMPLE_TARGETS ${EXAMPLE_CPP_NAME})
 endmacro()
 
-open3d_add_example(CameraPoseTrajectory)
+open3d_add_example(CameraPoseTrajectory      Open3D::3rdparty_opengl)
 open3d_add_example(ColorMapOptimization)
-open3d_add_example(DepthCapture)
+open3d_add_example(DepthCapture              Open3D::3rdparty_opengl)
 open3d_add_example(EvaluatePCDMatch)
 open3d_add_example(FileDialog                Open3D::3rdparty_tinyfiledialogs)
 open3d_add_example(FileSystem)
-open3d_add_example(Flann)
+open3d_add_example(Flann                     Open3D::3rdparty_opengl)
 open3d_add_example(Image)
 open3d_add_example(IntegrateRGBD)
-open3d_add_example(ISSKeypoints)
-open3d_add_example(LineSet)
+open3d_add_example(ISSKeypoints              Open3D::3rdparty_opengl)
+open3d_add_example(LineSet                   Open3D::3rdparty_opengl)
 open3d_add_example(Log)
-open3d_add_example(Octree)
+open3d_add_example(Octree                    Open3D::3rdparty_opengl)
 open3d_add_example(OdometryRGBD)
 if (TARGET Open3D::3rdparty_openmp)
     open3d_add_example(OpenMP                    Open3D::3rdparty_openmp)
 else()
     open3d_add_example(OpenMP)
 endif()
-open3d_add_example(PCDFileFormat)
-open3d_add_example(PointCloud)
+open3d_add_example(PCDFileFormat             Open3D::3rdparty_opengl)
+open3d_add_example(PointCloud                Open3D::3rdparty_opengl)
 open3d_add_example(PoseGraph)
 open3d_add_example(ProgramOptions)
-open3d_add_example(GeneralizedICP)
-open3d_add_example(RegistrationColoredICP)
-open3d_add_example(RegistrationRANSAC)
-open3d_add_example(RegistrationFGR)
-open3d_add_example(RGBDOdometry)
-open3d_add_example(SLAC)
+open3d_add_example(GeneralizedICP            Open3D::3rdparty_opengl)
+open3d_add_example(RegistrationColoredICP    Open3D::3rdparty_opengl)
+open3d_add_example(RegistrationRANSAC        Open3D::3rdparty_opengl)
+open3d_add_example(RegistrationFGR           Open3D::3rdparty_opengl)
+open3d_add_example(RGBDOdometry              Open3D::3rdparty_opengl)
+open3d_add_example(SLAC                      Open3D::3rdparty_opengl)
 open3d_add_example(SLACIntegrate)
-open3d_add_example(TIntegrateRGBD)
-open3d_add_example(TOdometryRGBD)
-open3d_add_example(TriangleMesh)
+open3d_add_example(TIntegrateRGBD            Open3D::3rdparty_opengl)
+open3d_add_example(TOdometryRGBD             Open3D::3rdparty_opengl)
+open3d_add_example(TriangleMesh              Open3D::3rdparty_opengl)
 if (TARGET Open3D::3rdparty_openmp)
     open3d_add_example(TrimMeshBasedOnPointCloud Open3D::3rdparty_openmp)
 else()
     open3d_add_example(TrimMeshBasedOnPointCloud)
 endif()
-open3d_add_example(ViewDistances)
-open3d_add_example(ViewPCDMatch)
-open3d_add_example(Visualizer)
+open3d_add_example(ViewDistances             Open3D::3rdparty_opengl)
+open3d_add_example(ViewPCDMatch              Open3D::3rdparty_opengl)
+open3d_add_example(Visualizer                Open3D::3rdparty_opengl)
 open3d_add_example(DenseSLAM)
-open3d_add_example(Voxelization)
+open3d_add_example(Voxelization              Open3D::3rdparty_opengl)
 
 if (BUILD_GUI)
     open3d_add_example(Draw)
