--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,7 @@ docs/tutorial/**/*.pcd
 docs/tutorial/**/*.json
 docs/_out/
 docs/python_api/
+docs/python_example/
 docs/conf.py
 docs/Doxyfile
 docs/getting_started.rst
