--- a/docs/getting_started.rst.in
+++ b/docs/getting_started.rst.in
@@ -187,27 +187,29 @@ features and are available for the main supported platforms. Also, the latest
 development version (``HEAD`` of ``master`` branch) binary package archives are
 provided here:
 
-:Linux (Ubuntu 18.04+ or glibc 2.27+ [*]_):
+:Linux (Ubuntu 18.04+ or glibc 2.27+ [#]_):
     .. hlist::
-        :columns: 4
+        :columns: 2
 
+        * `x86_64 (CXX11 ABI) <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-linux-x86_64-cxx11-abi-@OPEN3D_VERSION_FULL@.tar.xz>`__
+        * `x86_64 (CXX11 ABI) with CUDA 11.x <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-linux-x86_64-cxx11-abi-cuda-@OPEN3D_VERSION_FULL@.tar.xz>`__
         * `x86_64 (pre CXX11 ABI) <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-linux-x86_64-pre-cxx11-abi-@OPEN3D_VERSION_FULL@.tar.xz>`__
         * `x86_64 (pre CXX11 ABI) with CUDA 11.x <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-linux-x86_64-pre-cxx11-abi-cuda-@OPEN3D_VERSION_FULL@.tar.xz>`__
 
 :MacOSX v10.15+:
     .. hlist::
-        :columns: 4
+        :columns: 2
 
         * `x86_64 <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-darwin-x86_64-@OPEN3D_VERSION_FULL@.tar.xz>`__
 
 :Windows 10+:
     .. hlist::
-        :columns: 4
+        :columns: 2
 
         * `x86_64 Release <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-windows-amd64-@OPEN3D_VERSION_FULL@.zip>`__
         * `x86_64 Debug <https://storage.googleapis.com/open3d-releases-master/devel/open3d-devel-windows-amd64-@OPEN3D_VERSION_FULL@-dbg.zip>`__
 
-.. [*] To check the `glibc` version on your system, run :code:`ldd --version`
+.. [#] To check the `glibc` version on your system, run :code:`ldd --version`
 
 If you need only a subset of features, or a custom build configuration, please
 refer to :ref:`compilation` and compile Open3D from source.
@@ -237,18 +239,18 @@ Extract the archive and move the contents to a local folder (such as
 
 
 In Windows, you will have an additional ``bin`` folder with ``Open3D.dll``. Some
-files may be absent in the case of unsupported functionality. To use Open3D with 
-your programs through `cmake`, add ``-D Open3D_ROOT=~/Documents/Open3D_install`` 
+files may be absent in the case of unsupported functionality. To use Open3D with
+your programs through `cmake`, add ``-D Open3D_ROOT=~/Documents/Open3D_install``
 to your CMake configure command line. See the following example CMake projects for
 reference:
 
 * `Find Pre-Installed Open3D Package in CMake <https://github.com/isl-org/open3d-cmake-find-package>`__
 * `Use Open3D as a CMake External Project <https://github.com/isl-org/open3d-cmake-external-project>`__
 
-.. warning:: In Linux, do not link code with different CXX11 ABIs, since this will 
+.. warning:: In Linux, do not link code with different CXX11 ABIs, since this will
     most likely cause linker errors or crashes. Most system libraries in recent Linux
-    versions (e.g. if the OS came with GCC versions 5+) use the CXX11 ABI, while PyTorch 
-    and Tensorflow libraries typically use the pre CXX11 ABI. You can build Open3D 
+    versions (e.g. if the OS came with GCC versions 5+) use the CXX11 ABI, while PyTorch
+    and Tensorflow libraries typically use the pre CXX11 ABI. You can build Open3D
     from source with your chosen ABI by setting ``GLIBCXX_USE_CXX11_ABI`` in CMake.
 
 The C++ code examples in the ``examples/cpp`` folder of the repository illustrate
