--- a/docker/Dockerfile.openblas
+++ b/docker/Dockerfile.openblas
@@ -143,7 +143,8 @@ RUN mkdir build \
     .. \
  && make -j$(nproc) \
  && make install-pip-package -j$(nproc) \
- && make install -j$(nproc)
+ && make install -j$(nproc) \
+ && pyenv rehash
 RUN cp build/lib/python_package/pip_package/*.whl /
 
 # Compress ccache folder, move to / directory (optional)
