--- a/examples/python/t_reconstruction_system/default_config.yml
+++ b/examples/python/t_reconstruction_system/default_config.yml
@@ -24,4 +24,5 @@ integration_mode: color
 voxel_size: 0.0058
 sdf_trunc: 0.04
 block_count: 40000
+est_point_count: 6000000
 surface_weight_thr: 3.0
