--- a/docs/getting_started.rst.in
+++ b/docs/getting_started.rst.in
@@ -1,6 +1,3 @@
-.. role:: bash(code)
-   :language: bash
-
 .. _getting_started:
 
 Getting started
@@ -105,48 +102,6 @@ Conda
     `the official documentation <https://conda.io/projects/conda/en/latest/user-guide/install/index.html>`_.
 
 
-Docker
-------
-
-If you want to install the Open3D Python packages in a docker conatiner you will
-need to install a minimum set of dependencies. For more details please see `this issue <https://github.com/isl-org/Open3D/issues/3388>`__.
-
-A minimal ``Dockerfile`` looks like this:
-
-.. code-block:: dockerfile
-
-    # This could also be another ubuntu or debian based distributions
-    FROM ubuntu:20.04
-
-    # Install Open3D system dependencies and pip
-    RUN apt-get update && apt-get install --no-install-recommends -y \
-        libgl1 \
-        libgomp1 \
-        python3-pip \
-        && rm -rf /var/lib/apt/lists/*
-
-    # Install Open3D from the pypi repositories
-    RUN python3 -m pip install --no-cache-dir --upgrade open3d
-
-
-If you have an NVIDIA GPU and want to use it for computation (``CUDA``) or
-visualization, follow these `directions.
-<https://docs.docker.com/config/containers/resource_constraints/#gpu>`__
-
-To run GUI applications from the docker container, add these options to the
-:bash:`docker run` command line to ensure that docker has access to the:
-
-1. GPU:
-
-  - Intel:  :bash:`--privileged --device=/dev/dri:/dev/dri`
-
-  - Nvidia: :bash:`--gpus 'all,"capabilities=compute,utility,graphics"'`
-
-2. X server:
-    :bash:`-v /tmp/.X11-unix:/tmp/.X11-unix -e DISPLAY`
-
-Also see the `docker tutorial for ROS <http://wiki.ros.org/docker/Tutorials/Hardware%20Acceleration>`__ for more information.
-
 Try it
 ------
 
@@ -181,3 +136,76 @@ all Python examples.
     ``matplotlib``, ``opencv-python``. OpenCV is only used for reconstruction
     system. Please read util/install-deps-python.sh for installing these
     packages.
+
+
+Docker
+======
+
+You can install and run Open3D applications from a docker container.
+
+For Python application, you will need to install a minimum set of dependencies.
+For more details please see `this issue
+<https://github.com/isl-org/Open3D/issues/3388>`__. A minimal ``Dockerfile`` for
+Python applications looks like this:
+
+.. code-block:: dockerfile
+
+    # This could also be another Ubuntu or Debian based distributions
+    FROM ubuntu:latest
+
+    # Install Open3D system dependencies and pip
+    RUN apt-get update && apt-get install --no-install-recommends -y \
+        libgl1 \
+        libgomp1 \
+        python3-pip \
+        && rm -rf /var/lib/apt/lists/*
+
+    # Install Open3D from the pypi repositories
+    RUN python3 -m pip install --no-cache-dir --upgrade open3d
+
+The following ``Dockerfile`` runs the Open3D viewer as its main application:
+
+.. code-block:: dockerfile
+
+    # This could also be another Ubuntu or Debian based distributions
+    FROM ubuntu:latest
+
+    # Copy and install Open3D viewer from docker context
+    COPY open3d-app-*.deb /root/
+    RUN apt-get update \
+        && apt-get install --yes /root/open3d-app-*.deb \
+        && rm -rf /var/lib/apt/lists/*
+
+    # Run the Open3D Viewer by default
+    ENTRYPOINT ["Open3D"]
+
+If you have an NVIDIA GPU and want to use it for computation (``CUDA``) or
+visualization, follow these `directions.
+<https://docs.docker.com/config/containers/resource_constraints/#gpu>`__
+
+To run GUI applications from the docker container, add these options to the
+:bash:`docker run` command line to ensure that docker has access to the:
+
+1. GPU:
+
+  - Intel (Mesa drivers):  :bash:`--device=/dev/dri:/dev/dri`
+
+  - NVIDIA: :bash:`--gpus 'all,"capabilities=compute,utility,graphics"'`
+
+2. X server:
+    :bash:`-v /tmp/.X11-unix:/tmp/.X11-unix -e DISPLAY`
+
+For example, the following commands will run the docker container with the Open3D application, and provide access to the current directory as ``/root``:
+
+.. code-block:: bash
+
+    # Build docker image in folder containing Open3D deb package.
+    docker build -t open3d-test -f Dockerfile .
+    # Allow local X11 connections
+    xhost local:root
+    # Run docker image with the Open3D app on Intel GPU
+    docker run --device=/dev/dri:/dev/dri -v /tmp/.X11-unix:/tmp/.X11-unix -e DISPLAY -v "$PWD":/root open3d-test:latest
+    # Run docker image with the Open3D app on NVIDIA GPU
+    docker run  --gpus 'all,"capabilities=compute,utility,graphics"' -v /tmp/.X11-unix:/tmp/.X11-unix -e DISPLAY -v "$PWD":/root open3d-test:latest
+
+Also see the `docker tutorial for ROS <http://wiki.ros.org/docker/Tutorials/Hardware%20Acceleration>`__ for more information.
